WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
190777
[iOS] [Datalist] fast/forms/datalist/datalist-show-hide.html fails
https://bugs.webkit.org/show_bug.cgi?id=190777
Summary
[iOS] [Datalist] fast/forms/datalist/datalist-show-hide.html fails
Wenson Hsieh
Reported
2018-10-21 00:35:50 PDT
fast/forms/datalist/datalist-show-hide.html fails with a text diff: @@ -1,8 +1,9 @@ CLICK -PASS showingList is "true" +FAIL showingList should be true. Was false. BLUR PASS showingList is "false" PASS successfullyParsed is true +Some tests failed.
Attachments
Patch
(10.51 KB, patch)
2018-10-21 01:11 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix DRT build
(11.02 KB, patch)
2018-10-21 03:11 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for landing
(11.14 KB, patch)
2018-10-22 12:35 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-10-21 00:39:37 PDT
I think this was intended to test that the datalist suggestions menu can be presented and hidden. This test works on macOS by clicking to focus and then blurring the field; we could also make it test iOS by implementing UIScriptController::isShowingDataListSuggestions and also tweaking the test to switch between datalist suggestions and the regular keyboard by tapping on different parts of the datalist input.
Wenson Hsieh
Comment 2
2018-10-21 01:11:51 PDT
Created
attachment 352864
[details]
Patch
Wenson Hsieh
Comment 3
2018-10-21 03:11:11 PDT
Created
attachment 352867
[details]
Fix DRT build
Radar WebKit Bug Importer
Comment 4
2018-10-22 10:06:56 PDT
<
rdar://problem/45456361
>
Tim Horton
Comment 5
2018-10-22 11:53:33 PDT
Comment on
attachment 352867
[details]
Fix DRT build View in context:
https://bugs.webkit.org/attachment.cgi?id=352867&action=review
> Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm:806 > + if ([NSStringFromClass(window.class) isEqualToString:@"UIRemoteKeyboardWindow"])
Feels weird that this is a string compare instead of a class compare (store NSClassFromString("UIRemoteKeyboardWindow") at the top of the function and compare against that). But it also does not matter at all.
Wenson Hsieh
Comment 6
2018-10-22 12:19:22 PDT
Comment on
attachment 352867
[details]
Fix DRT build View in context:
https://bugs.webkit.org/attachment.cgi?id=352867&action=review
>> Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm:806 >> + if ([NSStringFromClass(window.class) isEqualToString:@"UIRemoteKeyboardWindow"]) > > Feels weird that this is a string compare instead of a class compare (store NSClassFromString("UIRemoteKeyboardWindow") at the top of the function and compare against that). But it also does not matter at all.
Good call — changed to check -isKindOfClass: instead.
Wenson Hsieh
Comment 7
2018-10-22 12:35:22 PDT
Created
attachment 352900
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2018-10-22 13:12:15 PDT
Comment on
attachment 352900
[details]
Patch for landing Clearing flags on attachment: 352900 Committed
r237328
: <
https://trac.webkit.org/changeset/237328
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug